[package]
name = "sb-components-motor-shield-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
paste = "1.0.15"
rp-pico = { version = "0.9.0", optional = true }
rppal = { version = "0.22.1", optional = true, features = ["hal"] }
motor-driver-hal = { version = "0.1.3", default-features = false, optional = true }
fugit = "0.3.9"
# embedded-interfaces ?
# l293x = "0.3.0"
[features]
default = ["sbc-rpi"]
# default = ["sbc-pico"]
arm = []
sbc-pico = ["arm", "rp-pico", "motor-driver-hal"]
sbc-rpi = ["arm", "rppal", "motor-driver-hal/rppal"]
sbc-linux = ["arm", "motor-driver-hal/linux-embedded-hal"]
