[package]
name = "sb-components-motor-shield-driver"
# Subject to review, for now, Revision Number will prefix YYMMDD of the publish date, followed by conventional increasing value
version = "0.1.2512160"
edition = "2021"
publish = false
autoexamples = true
description = "embedded-hal driver of the 40pin SB Components Motor Shield HAT for Raspberry Pi"
license-file = "LICENSE"
categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
keywords = ["L293", "Pico", "Raspberry Pi", "Motor", "Motor Shield"]
authors = ["NebulousPsychology"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
paste = "1.0.15"
rp-pico = { version = "0.9.0", optional = true }
rppal = { version = "0.22.1", optional = true, features = ["hal"] }
# rppal is used by motor-driver-hal
# apigpio endorses rppal as an alternative to itself
# rpi_embedded fork from rppal
# rpi-pal forks rppal
motor-driver-hal = { version = "0.1.3", default-features = false, optional = true }
fugit = "0.3.9"
# embedded-interfaces ?
# l293x = "0.3.0"


[features]
# default = ["sbc-rpi"]
default = ["sbc-pico"]
arm = []
std = []
sbc-pico = ["arm", "rp-pico", "motor-driver-hal"]
sbc-rpi = [
    "arm",
    "std",
    "rppal",
    "rppal/embedded-hal",
    "motor-driver-hal/rppal",
]
sbc-linux = ["arm", "std", "motor-driver-hal/linux-embedded-hal"]
